--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <body>
     <i class="fab fa-500px"></i>
+
+    <h1>Hello World</h1>
     <!--script-->
     <script scr="script.js"> </script>
 </body>
